testsuites/LLT/compiler/Diagnose/lex_test/lex_unexpected_digit/case5.expect.out
error: expected decimal digit, found 'e'
  ==> case5.cj:14:10:
   | 
14 |     0x123.3peeee
   |             ^ expected decimal digit
   | 

error: expected decimal digit, found 'e'
  ==> case5.cj:15:18:
   | 
15 |     var a = 0x123.3peeee
   |                     ^ expected decimal digit
   | 

error: expected decimal digit, found 'e'
  ==> case5.cj:16:10:
   | 
16 |     0x123.3peeee
   |             ^ expected decimal digit
   | 

3 errors generated, 3 errors printed.
